--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,17 @@
   border-radius: 10px;
   border: 2px solid #fff;
 }
+
+#scroll::-webkit-scrollbar {
+  width: 10px;
+}
+
+#scroll::-webkit-scrollbar-track {
+  display: none;
+}
+
+#scroll::-webkit-scrollbar-thumb {
+  background-color: #040e1a;
+  border-radius: 20px;
+  border: 2px solid #cbd5e1;
+}
