--- a/src/Components/ResponseLoading.module.css
+++ b/src/Components/ResponseLoading.module.css
@@ -1,56 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-/*  Chat Div Styling */
-
-.chat-Div::-webkit-scrollbar {
-  display: none;
-}
-
-/* Sidebar styling */
-
-.sideBar {
-  overflow-x: hidden;
-  overflow-y: scroll;
-}
-
-.sideBar::-webkit-scrollbar {
-  width: 10px;
-}
-
-.sideBar::-webkit-scrollbar-track {
-  display: none;
-}
-
-.sideBar::-webkit-scrollbar-thumb {
-  background-color: #636262;
-  border-radius: 10px;
-  border: 2px solid #fff;
-}
-
-/* Body styling */
-
-#scroll::-webkit-scrollbar {
-  width: 10px;
-}
-
-#scroll::-webkit-scrollbar-track {
-  display: none;
-}
-
-#scroll::-webkit-scrollbar-thumb {
-  background-color: #040e1a;
-  border-radius: 20px;
-  border: 2px solid #cbd5e1;
-}
-
 /* Loading Animtion
 
 .LoadingContainer {
@@ -63,9 +10,10 @@
 }
 
 .ring {
-  width: 140px;
-  height: 140px;
+  width: 170px;
+  height: 170px;
   border-radius: 50%;
+  border: 0px solid #081229;
   position: absolute;
 }
 
@@ -109,4 +57,57 @@
   100% {
     transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
   }
-} */
+}
+ */
+
+.container {
+  padding: 0 10px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.text {
+  color: aqua;
+  display: inline-block;
+  margin-left: 10px;
+  font-size: 25px;
+}
+
+.bounceball {
+  position: relative;
+  display: inline-block;
+  height: 50px;
+  width: 20px;
+}
+
+.bounceball:before {
+  position: absolute;
+  content: "";
+  display: block;
+  top: 0;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: aqua;
+  transform-origin: 50%;
+  animation: bounce 500ms alternate infinite ease;
+}
+
+@keyframes bounce {
+  0% {
+    top: 30px;
+    height: 5px;
+    border-radius: 60px 60px 20px 20px;
+    transform: scaleX(2);
+  }
+  35% {
+    height: 15px;
+    border-radius: 50%;
+    transform: scaleX(1);
+  }
+  100% {
+    top: 0;
+  }
+}
